# umate

./: .gitignore  LICENSE  README.md
docs/design/arc/: custom_codec.excalidraw  tdmodel_migrate.excalidraw  third_cloud.excalidraw
rust-lib/: Cargo.toml  Dockerfile
rust-lib/.cargo/: config.toml
rust-lib/dart-ffi/: Cargo.toml  Makefile
rust-lib/src/dartffi/: Cargo.toml
rust-lib/src/dartffi/src/: example.rs
rust-lib/src/infra/: Cargo.toml
rust-lib/src/infra/src/: main.rs
rust-lib/src/infra/src/db/: mod.rs  mysql.rs
rust-lib/src/infra/src/http/: mod.rs  request.rs
rust-lib/src/infra/src/http/server/: handler.rs
rust-lib/src/proto/: Cargo.toml  build.rs
rust-lib/src/proto/proto/device/: instance.proto
rust-lib/src/proto/src/: csv_file.rs  device_instance.rs  lib.rs
umate-flutter/: README.md  pubspec.yaml
umate-flutter/android/app/: build.gradle
umate-flutter/android/app/src/main/: AndroidManifest.xml
umate-flutter/android/app/src/main/kotlin/com/example/umate/: MainActivity.kt
umate-flutter/ios/Runner/: Info.plist
umate-flutter/ios/Runner.xcodeproj/: project.pbxproj
umate-flutter/lib/: main.dart  routes.dart  welcome.dart
umate-flutter/lib/bindings/: pulsar_api_bindings.dart
umate-flutter/lib/collections/: assets.gen.dart  intents.dart  side_bar_title.dart
umate-flutter/lib/components/share/: page_route.dart
umate-flutter/lib/extensions/: constrains.dart  context.dart
umate-flutter/lib/l10n/: app_en.arb  app_zh.arb  l10n.dart
umate-flutter/lib/pages/home/: home.dart
umate-flutter/lib/pages/pulsar/: pulsar.dart
umate-flutter/lib/pages/root/: root.dart  sidebar.dart
umate-flutter/lib/pages/totp/: authenticator.dart
umate-flutter/lib/utils/: platform.dart  service_utils.dart
umate-flutter/linux/: CMakeLists.txt  my_application.cc
umate-flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
umate-flutter/macos/Runner.xcodeproj/: project.pbxproj
umate-flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
umate-flutter/macos/Runner/Configs/: AppInfo.xcconfig
umate-flutter/test/: widget_test.dart
umate-flutter/web/: index.html  manifest.json
umate-flutter/windows/: CMakeLists.txt
umate-flutter/windows/runner/: Runner.rc  main.cpp
