[package]
name = "rustlib"
version = "0.1.0"
authors = ["G.T <howzequinn@gmail.com>"]
edition = "2018"

[[bin]]
name = "rustlib"

[dependencies]
prost.workspace = true
proto.workspace = true

[workspace]
members = [
    "src/infra",
    "src/dartffi",
    "src/proto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"


[workspace.dependencies]
infra = { path = "src/infra" }
proto = { path = "src/proto" }
prost = "0.13.1"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
  "mysql",
] }
tonic = { version = "0.12.0", features = ["prost", "gzip"] }
once_cell = "1.8"
tokio = { version = "1", features = ["full"] }