[package]
name = "infra"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
once_cell.workspace = true
sqlx.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4.3"
csv.workspace = true
actix-web.workspace = true
env_logger.workspace = true
log.workspace = true