[package]
name = "proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
once_cell.workspace = true
tokio.workspace = true
csv.workspace = true
rust-crypto.workspace = true

[build-dependencies]
tonic-build = { version = "0.12.0", features = ["prost"] }
prost-build = "0.13.1"
prost-wkt-build = "0.5"
